# nitter-status

./: .env.example  .gitignore  .tokeignore  Cargo.toml  README.md
entities/: Cargo.toml  README.md
entities/src/: check_errors.rs  health_check.rs  host.rs  host_overrides.rs  instance_alerts.rs  instance_mail.rs  instance_stats.rs  last_mail_send.rs  log.rs  mail_verification_tokens.rs  mod.rs  prelude.rs  update_check.rs
entities/src/state/: error_cache.rs  mod.rs  scanner.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230729_010231_datetime_rowid.rs  m20230729_230909_datetime_int_host.rs  m20230803_154714_version_url.rs  m20230829_201916_country.rs  m20230914_231514_connectivity.rs  m20231011_231223_errors.rs  m20231112_142206_stats.rs  m20231129_003005_alerts.rs  m20231129_003005_mail.rs  m20250216_185501_overrides.rs  m20250216_185501_users.rs  m20260221_011701_stats_simplified.rs  main.rs
scanner/: Cargo.toml
scanner/src/: about_parser.rs  alerts.rs  cache_update.rs  cleanup.rs  instance_check.rs  instance_parser.rs  lib.rs  list_update.rs  profile_parser.rs  update_stats.rs  version_check.rs
scanner/test_data/: about.html  health.json  instancelist.html  instancelist_expected.csv  profile.html
server/: Cargo.toml
server/src/: admin.rs  api.rs  lib.rs  website.rs
server/src/admin/: alerts.rs  errors.rs  locks.rs  logs.rs  mail.rs  mod.rs  session.rs  settings.rs  stats.rs
server/static/: admin.js  admin_index.js  history.2.js  history.js  instance.js  login_key.js  overview_admin.js  robots.txt  sorting.css  stats.js  table_toggle.js
server/templates/: about.html.j2  admin.html.j2  admin_index.html.j2  admin_logs.html.j2  alerts.html.j2  dygraph_fix.html.j2  error.html.j2  errors_admin.html.j2  history_admin.html.j2  instance_admin.html.j2  instance_errors.html.j2  instance_locks.html.j2  instance_settings.html.j2  instance_stats.html.j2  instances.html.j2  login.html.j2  mail_activate_confirm.html.j2  mail_activate_success.html.j2  mail_activation.j2  mail_send.html.j2  rip.html.j2
src/: main.rs
