[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = ["deflate","gzip","brotli","cookies"] }
sea-orm = { workspace = true, features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
scraper = "0.17.1"
chrono = { workspace = true }
regex = { workspace = true }
git2 = "0.17.2"
# testing
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tracing-test = { workspace = true }
csv = "1.2.2"

[dev-dependencies.migration]
path = "../migration"

[dependencies.entities]
path = "../entities"