[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
axum = { workspace = true, features = ["json", "macros", "query", "headers", "multipart"] }
axum-extra = { version = "0.7.5" }
sea-orm = { workspace = true, features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
hyper = { version = "0.14.20", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4.2", features = ["full"] }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["deflate","gzip","brotli","cookies", "rustls-tls"] }
sha2 = "0.10"
constant_time_eq = "0.3"
base16ct = { version = "0.2", features = ["alloc"]}
thiserror = { workspace = true }
trust-dns-resolver = { version = "0.23.0", features = ["dns-over-rustls"] }

# templating
tera = "1.19.0"

# login
tower-sessions = {version = "0.3.1", features = [ "sqlite-store","tokio-rt" ]}
time = { workspace = true }

# login rate limits
tower_governor = "0.1"

# mail verification
rand = "0.8"
lettre = "0.11.2"

[dependencies.entities]
path = "../entities"